# nocobase-tauri-app

./: .gitignore  .gitmodules  README.md  index.html  package.json
runtime-template/: .gitignore  package.json  tsconfig.paths.json
scripts/: prepare-resources.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
